--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "java"
-    id "io.spring.dependency-management" version "1.0.11.RELEASE"
+    id "io.spring.dependency-management" version "1.1.3"
 }
 
 repositories {
@@ -14,8 +14,10 @@ subprojects {
     group = "io.pivotal"
     version = "0.0.1-SNAPSHOT"
 
-    sourceCompatibility = 11
-    targetCompatibility = 11
+    java {
+        sourceCompatibility = 17
+        targetCompatibility = 17
+    }
 
     tasks.withType(JavaCompile) {
         options.encoding = "UTF-8"
@@ -24,23 +26,23 @@ subprojects {
     repositories {
         mavenCentral()
     }
-    
+
     dependencyManagement {
         dependencies {
-            dependency "org.springframework.cloud:spring-cloud-stream-binder-kafka:3.2.2"
-            dependency "org.springframework.boot:spring-boot-starter-webflux:2.6.6"
-            dependency "org.apache.commons:commons-lang3:3.11"
+            dependency "org.springframework.cloud:spring-cloud-stream-binder-kafka:4.0.4"
+            dependency "org.springframework.boot:spring-boot-starter-webflux:3.1.4"
+            dependency "org.apache.commons:commons-lang3:3.13.0"
         }
     }
 
     dependencies {
-        compileOnly "org.projectlombok:lombok:1.18.22"
-        annotationProcessor "org.projectlombok:lombok:1.18.22"
+        compileOnly "org.projectlombok:lombok:1.18.30"
+        annotationProcessor "org.projectlombok:lombok:1.18.30"
 
-        testCompileOnly "org.projectlombok:lombok:1.18.22"
-        testAnnotationProcessor "org.projectlombok:lombok:1.18.22"
+        testCompileOnly "org.projectlombok:lombok:1.18.30"
+        testAnnotationProcessor "org.projectlombok:lombok:1.18.30"
 
-        testImplementation "org.junit.jupiter:junit-jupiter-api:5.8.1"
+        testImplementation "org.junit.jupiter:junit-jupiter-api:5.10.0"
     }
 
 }
